newer requirements. do not merge before my approval
Change-Id: I336fa2e34645686733dcedd8fa13a29fd082c99f

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -59,6 +59,7 @@ debconf
 debconf-i18n
 debconf-utils
 debianutils
+dhcp-checker
 diffutils
 discover
 discover-data
@@ -141,6 +142,10 @@ grub2-common
 guestmount
 gzip
 haproxy
+heat-api-cfn
+heat-api-cloudwatch
+heat-api
+heat-engine
 hdparm
 hicolor-icon-theme
 hostname
