Added PRODUCT_VERSION in boot menu
Change-Id: Ifc226f28651b2e133c0b977073b51140e5f1ef1d

--- a/iso/isolinux/isolinux.cfg
+++ b/iso/isolinux/isolinux.cfg
@@ -5,7 +5,7 @@ timeout 300
 display boot.msg
 
 menu background splash.jpg
-menu title Welcome to Fuel Installer!
+menu title Welcome to Fuel Installer (version: will_be_substituted_with_PRODUCT_VERSION)
 menu color border 0 #ffffffff #00000000
 menu color sel 7 #ffffffff #ff000000
 menu color title 0 #ffffffff #00000000
