--- a/iso/syslinux/syslinux.cfg
+++ b/iso/syslinux/syslinux.cfg
@@ -5,7 +5,7 @@ timeout 300
 display boot.msg
 
 menu background splash.jpg
-menu title Welcome to Fuel Installer!
+menu title Welcome to Fuel Installer (version: will_be_substituted_with_PRODUCT_VERSION)
 menu color border 0 #ffffffff #00000000
 menu color sel 7 #ffffffff #ff000000
 menu color title 0 #ffffffff #00000000
