--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -162,7 +162,7 @@ make-3.81-20.el6
 man-1.6f-32.el6
 memcached-1.4.4-3.el6
 mlocate-0.22.2-4.el6
-mod_fcgid-2.3.7-1.el6
+mod_fastcgi
 mod_ssl-2.2.15-15.el6.1
 mod_wsgi-3.2-1.el6
 mtools-4.0.17-3.el6
