Add packages to req-rpm and req-deb
Heatclient is needed for Murano project
And other are usefull admin's tools

Change-Id: I25c252ec860e3bda1b37b04e8316740bb870315f

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -63,6 +63,7 @@ dhcp-checker
 diffutils
 discover
 discover-data
+disktype
 dmidecode
 dmsetup
 dnsmasq-base
@@ -149,6 +150,7 @@ heat-engine
 hdparm
 hicolor-icon-theme
 hostname
+htop
 ifenslave-2.6
 ifupdown
 info
@@ -698,6 +700,7 @@ python-glance
 python-glanceclient
 python-gnupginterface
 python-greenlet
+python-heatclient
 python-httplib2
 python-iso8601
 python-json-patch
@@ -845,6 +848,7 @@ tcpdump
 telnet
 tgt
 time
+tmux
 traceroute
 ttf-dejavu-core
 tzdata
