--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -519,3 +519,7 @@ xinetd-2.3.14-38.el6
 yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
+python-heatclient
+disktype
+htop
+tmux
