--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -25,6 +25,7 @@ psycopg2==2.4.6
 pycrypto==2.6
 python-heatclient==0.2.4
 python-muranoclient==0.2
+python-neutronclient==2.3.1
 requests==1.1.0
 simplejson==2.6.2
 six==1.1.0
