--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -146,11 +146,11 @@ grub2-common
 guestmount
 gzip
 haproxy
+hdparm
+heat-api
 heat-api-cfn
 heat-api-cloudwatch
-heat-api
 heat-engine
-hdparm
 hicolor-icon-theme
 hostname
 htop
@@ -491,8 +491,8 @@ libyajl1
 libyaml-0-2
 linux-firmware
 linux-firmware-nonfree
-linux-image-3.8
 linux-headers-3.8
+linux-image-3.8
 linux-libc-dev
 linux-server
 lksctp-tools
@@ -539,6 +539,14 @@ ncurses-bin
 net-tools
 netbase
 netcat-openbsd
+neutron-common
+neutron-dhcp-agent
+neutron-l3-agent
+neutron-metadata-agent
+neutron-ovs-cleanup
+neutron-plugin-openvswitch
+neutron-plugin-openvswitch-agent
+neutron-server
 nginx
 node-less
 nodejs
@@ -564,7 +572,6 @@ openssh-server
 openssl
 openstack-dashboard
 openstack-dashboard-ubuntu-theme
-openvswitch-common
 openstack-murano-virtualenv
 openstack-murano-virtualenv-murano-api
 openstack-murano-virtualenv-murano-common
@@ -641,6 +648,7 @@ openstack-savanna-virtualenv-python-sqlalchemy
 openstack-savanna-virtualenv-python-webob
 openstack-savanna-virtualenv-python-werkzeug
 openstack-savanna-virtualenv-savanna
+openvswitch-common
 openvswitch-datapath-lts-raring-dkms
 openvswitch-switch
 os-prober
@@ -726,10 +734,12 @@ python-memcache
 python-migrate
 python-minimal
 python-mock
-python-mysqldb
 python-muranoclient
+python-mysqldb
 python-netaddr
 python-netifaces
+python-neutron
+python-neutronclient
 python-nose
 python-nova
 python-novaclient
@@ -753,8 +763,6 @@ python-pycurl
 python-pyparsing
 python-pypcap
 python-pyudev
-python-quantum
-python-quantumclient
 python-requests
 python-routes
 python-scapy
@@ -786,14 +794,6 @@ qemu-kvm
 qemu-system-common
 qemu-system-x86
 qemu-utils
-quantum-common
-quantum-dhcp-agent
-quantum-l3-agent
-quantum-metadata-agent
-quantum-ovs-cleanup
-quantum-plugin-openvswitch
-quantum-plugin-openvswitch-agent
-quantum-server
 rabbitmq-server
 radosgw
 readline-common
