--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -1,7 +1,7 @@
 @Base
 @Core
 Django-1.3.4-1.el6
-Django14-1.4.5-1.el6
+Django14
 GeoIP-1.4.8-1.el6
 MySQL-client-5.5.28-7
 MySQL-client-wsrep-5.5.28_wsrep_23.7-12
@@ -26,7 +26,6 @@ boost-system-1.41.0-17.el6_4
 boost-thread-1.41.0-17.el6_4
 byacc-1.9.20070509-7.el6
 c-ares19-1.9.1-4.el6.3
-ceilometer-2013.1-4
 centos-release-6-4.el6.centos.10
 ceph
 ceph-deploy
@@ -238,18 +237,25 @@ openssh-clients-5.3p1-84.1.el6
 openssh-server-5.3p1-84.1.el6
 openssl-devel-1.0.0-27.el6_4.2
 openssl098e-0.9.8e-17.el6.centos.2
+openstack-ceilometer-api
+openstack-ceilometer-central
+openstack-ceilometer-collector
+openstack-ceilometer-common
+openstack-ceilometer-compute
 openstack-cinder
 openstack-dashboard
 openstack-glance
 openstack-heat-api
 openstack-heat-api-cfn
 openstack-heat-api-cloudwatch
-openstack-heat-cli
 openstack-heat-common
 openstack-heat-engine
 openstack-keystone
 openstack-murano-virtualenv-murano-api
 openstack-murano-virtualenv-murano-conductor
+openstack-neutron
+openstack-neutron-linuxbridge
+openstack-neutron-openvswitch
 openstack-nova
 openstack-nova-api
 openstack-nova-cells
@@ -262,9 +268,6 @@ openstack-nova-network
 openstack-nova-novncproxy
 openstack-nova-objectstore
 openstack-nova-scheduler
-openstack-quantum
-openstack-quantum-linuxbridge
-openstack-quantum-openvswitch
 openstack-savanna-virtualenv-savanna
 openstack-swift
 openstack-swift-account
@@ -303,13 +306,14 @@ pyparsing-1.5.6-1.el6
 pyparsing-doc-1.5.6-1.el6
 pysendfile-2.0.0-3.el6
 python-actdiag-0.4.3-1
-python-alembic-0.4.2-1.el6
-python-amqp-1.2.0-6.el6
+python-alembic
+python-amqp
 python-amqplib-1.0.2-1.el6
 python-anyjson-0.3.3-2.el6
 python-argparse-1.2.1-2.el6
 python-blockdiag-1.2.4-1
 python-boto-2.5.2-3.el6
+python-ceilometer
 python-ceph
 python-cheetah-2.4.1-1.el6
 python-cinder
@@ -324,72 +328,72 @@ python-daemon-1.5.2-1.el6
 python-deltarpm-3.5-0.5.20090913git.el6
 python-devel-2.6.6-37.el6_4
 python-django-appconf-0.5-3.el6
-python-django-compressor-1.2-4.el6
+python-django-compressor
 python-django-horizon
 python-django-horizon-doc
-python-django-openstack-auth-1.0.9-2.el6
+python-django-openstack-auth
 python-dmidecode-3.10.13-3.el6_4
 python-ethtool-0.6-3.el6
-python-eventlet-0.9.17-2.el6
-python-eventlet-doc-0.9.17-2.el6
+python-eventlet
+python-eventlet-doc
 python-funcparserlib-0.3.5-1
 python-gflags-1.4-3.el6
 python-glance
 python-glanceclient
-python-greenlet-0.3.1-12.el6
-python-greenlet-devel-0.3.1-12.el6
+python-greenlet
+python-greenlet-devel
 python-heatclient
 python-httplib2-0.7.7-1.el6
 python-importlib-1.0.2-1.el6
 python-ipaddr-2.1.9-1.el6
 python-iso8601-0.1.4-2.el6
-python-jsonschema-0.2-1.el6
+python-jsonschema
 python-keyring-0.7-1.el6
 python-keystone
 python-keystoneclient
 python-keystoneclient-doc
-python-kombu-2.4.7-3.el6
+python-kombu
 python-lockfile-0.8-3.el6
 python-markdown-2.0.1-3.1.el6
 python-meld3-0.6.7-1.el6
 python-migrate-0.7.2-4.el6
 python-netaddr-0.7.5-4.el6
 python-netifaces-0.5-1.el6
-python-nose-cover3-0.1.0-5.el6
+python-neutron
+python-neutronclient
+python-nose-cover3
 python-nova
 python-novaclient
 python-novaclient-doc
 python-nwdiag-0.9.4-1
 python-openvswitch
 python-ordereddict-1.1-2.el6
-python-oslo-config-1.1.0-1.el6
-python-oslo-config-doc-1.1.0-1.el6
+python-oslo-config
+python-oslo-config-doc
 python-osnagios-1.1-5.el6
 python-paramiko-1.7.5-2.1.el6
 python-passlib-1.5.3-1.el6
 python-paste-1.7.5.1-4.20111221hg1498.el6
 python-paste-deploy1.5-1.5.0-5.el6
 python-pbr
-python-pip-0.8-1.el6
+python-pip
 python-prettytable-0.6.1-1.el6
 python-py-1.4.15-1.el6
 python-pygments-1.1.1-1.el6
 python-pyudev-0.15-1.el6
 python-qpid-qmf-0.14-14.el6_3
-python-quantum
-python-quantumclient
-python-requests-0.14.1-4.el6
+python-requests
 python-rhsm
 python-routes
 python-routes1.12-1.12.3-4.el6
 python-seqdiag-0.8.2-1
 python-setuptools-0.6.10-3.el6
-python-simplejson-2.6.0-2.el6
-python-six-1.1.0-2.el6
+python-simplejson
+python-six
 python-sphinx10-1.0.8-1.el6
 python-sphinx10-doc-1.0.8-1.el6
 python-sqlalchemy-0.7.9-1.el6.2
-python-stevedore-0.8-1.el6
+python-stevedore
 python-swiftclient
 python-swiftclient-doc
 python-tablib-0.9.11.20120702git752443f-5.el6
@@ -397,10 +401,10 @@ python-unittest2-0.5.1-3.el6
 python-urwid
 python-versiontools-1.9.1-3.el6
 python-virtualenv-1.7.2-1.el6
-python-warlock-0.4.0-2.el6
+python-warlock
 python-webcolors-1.4-1
-python-webob1.0-1.0.8-3.el6
-python-websockify-0.4.1-1.el6
+python-webob
+python-websockify
 python-wsgilog-0.3-1
 python-wsgiref-0.1.2-6.el6
 pyxattr-0.5.0-1.el6
@@ -515,7 +519,7 @@ usermode-1.102-3.el6
 v8-3.14.5.7-3.el6
 vim-enhanced-7.2.411-1.8.el6
 virt-what-1.11-1.2.el6
-wget-1.12-1.4.el6
+wget
 whatmask-1.2-7.el6
 wireshark-1.2.15-2.el6_2.1
 wxBase-2.8.12-2.el6
