--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -24,13 +24,15 @@ pip==1.2.1
 prettytable==0.6.1
 psycopg2==2.4.6
 pycrypto==2.6
+python-ceilometerclient==1.0.6
 python-heatclient==0.2.4
 python-muranoclient==0.2
-python-ceilometerclient==1.0.6
 requests==1.1.0
 simplejson==2.6.2
 six==1.1.0
 tornado==3.0
+uWSGI==1.9.18.2
+ujson==1.33
 web.py==0.37
 wsgilog==0.3
 wsgiref==0.1.2
