Add OSTF dependency to requirement-eggs.txt file
Update version for next packages:
* python-muranoclient
* puthon-savanaclient
* python-heatclient

Add next packages:
* python-novaclient
* python-cinderclient
* python-keystoneclient

Change-Id: I1b28645f24912a7e1b695e0b7cc96c88b42934cc

--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -19,14 +19,19 @@ netifaces==0.8
 nose2==0.4.1
 nose==1.1.2
 ordereddict==1.1
+oslo.config==1.1.1
 pbr==0.5.21
 pip==1.2.1
 prettytable==0.6.1
 psycopg2==2.4.6
 pycrypto==2.6
 python-ceilometerclient==1.0.6
-python-heatclient==0.2.4
-python-muranoclient==0.2
+python-cinderclient==1.0.6
+python-heatclient==0.2.5
+python-keystoneclient==0.4.1
+python-muranoclient==0.2.11
+python-novaclient==2.15.0
+python-savannaclient==0.3
 requests==1.1.0
 simplejson==2.6.2
 six==1.1.0
