--- a/iso/ks.template
+++ b/iso/ks.template
@@ -8,6 +8,7 @@ rootpw r00tme
 timezone --utc Etc/UTC
 firewall --disabled
 selinux --disabled
+clearpart --all
 zerombr
 %include /tmp/bootloader.ks
 %include /tmp/partition.ks
