2479: discard any existing disk layout
Change-Id: I3fdb5f7612d0408ca755b5c455d0cdd43e4a1174

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -8,7 +8,7 @@ rootpw r00tme
 timezone --utc Etc/UTC
 firewall --disabled
 selinux --disabled
-zerombr
+# NEVER ever place zerombr here
 %include /tmp/bootloader.ks
 %include /tmp/partition.ks
 
