--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -45,6 +45,7 @@ cronie-anacron-1.4.4-7.el6
 cronie-noanacron-1.4.4-7.el6
 crontabs-1.10-33.el6
 curl-7.19.7-37.el6_4
+daemonize
 db4-4.7.25-18.el6_4
 db4-cxx-4.7.25-18.el6_4
 db4-utils-4.7.25-18.el6_4
