--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -28,10 +28,10 @@ byacc-1.9.20070509-7.el6
 c-ares19-1.9.1-4.el6.3
 ceilometer-2013.1-4
 centos-release-6-4.el6.centos.10
-ceph-0.61.8-0.el6
+ceph
 ceph-deploy
-ceph-radosgw-0.61.8-0.el6
-ceph-test-0.61.8-0.el6
+ceph-radosgw
+ceph-test
 cirros-testvm
 cluster-glue-libs-1.0.11-59.1
 cman-3.0.12.1-49.el6
@@ -142,13 +142,13 @@ kernel-firmware-2.6.32-358.118.1.openstack.el6
 kernel-headers-2.6.32-358.118.1.openstack.el6
 leveldb-1.7.0-2.el6
 libaio-0.3.107-10.el6
-libcephfs1-0.61.8-0.el6
+libcephfs1
 libevent-devel-1.4.13-4.el6
 libfcgi-2.4.0-alt5.2
 libicu-4.2.1-9.1.el6_2
 libqb-0.14.2-4.el6
-librados2-0.61.8-0.el6
-librbd1-0.61.8-0.el6
+librados2
+librbd1
 librelp-0.1.1-4.1.el6
 libudev-147-2.46.el6
 libunwind-1.1-2.el6
@@ -307,7 +307,7 @@ python-anyjson-0.3.3-2.el6
 python-argparse-1.2.1-2.el6
 python-blockdiag-1.2.4-1
 python-boto-2.5.2-3.el6
-python-ceph-0.61.8-0.el6
+python-ceph
 python-cheetah-2.4.1-1.el6
 python-cinder
 python-cinderclient
@@ -408,7 +408,7 @@ qpid-qmf-0.14-14.el6_3
 qpid-tests-0.14-1.el6_2
 qpid-tools-0.14-6.el6_3
 rabbitmq-server-2.8.7-2.el6
-rbd-fuse-0.61.8-0.el6
+rbd-fuse
 redhat-lsb-core-4.0-7.el6.centos
 resource-agents-3.9.5-56.1
 rpm-build-4.8.0-32.el6
