fix suitable both for hw and virtual nodes
Change-Id: Ib47acbdc7dc8f30e0ffb71e7a1999824892e8702

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -58,9 +58,9 @@ else
     echo "cdrom" > /tmp/source.ks
 fi
 
-hdparm -z /dev/${tgtdrive}
-dd if=/dev/zero of=/dev/${tgtdrive} bs=1M count=10
-sleep 5
+vgremove -ff os
+dd if=/dev/zero of=/dev/${tgtdrive} bs=10M count=10
+sleep 3
 hdparm -z /dev/${tgtdrive}
 parted -s /dev/${tgtdrive} mklabel gpt
 parted -a none -s /dev/${tgtdrive} unit MiB mkpart primary 0 24
@@ -68,7 +68,7 @@ parted -s /dev/${tgtdrive} set 1 bios_grub on
 parted -a none -s /dev/${tgtdrive} unit MiB mkpart primary fat16 24 224
 parted -s /dev/${tgtdrive} set 2 boot on
 parted -a none -s /dev/${tgtdrive} unit MiB mkpart primary 224 424
-sleep 10
+sleep 3
 hdparm -z /dev/${tgtdrive}
 
 # partition
