--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -489,8 +489,8 @@ rubygems-1.3.7-1.el6
 savanna-dashboard
 scapy-2.0.0.10-5.el6
 screen-4.0.3-16.el6
-selinux-policy-3.7.19-195.el6_4.12
-selinux-policy-targeted-3.7.19-195.el6_4.12
+selinux-policy
+selinux-policy-targeted
 send2syslog-0.1-1.el6
 snappy-1.0.5-1.el6
 socat-1.7.2.2-1.el6
