--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -128,6 +128,7 @@ gcc-4.4.7-3.el6
 gcc-c++-4.4.7-3.el6
 gdisk-0.8.4-1.el6
 gperftools-libs-2.0-11.el6.3
+gpxe-bootimgs-0.9.7-6.9.el6
 haproxy-1.4.19-1.el6
 hdparm-9.16-3.4.el6
 hiera-1.2.0-1.el6
