--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -127,6 +127,7 @@ galera
 gcc-4.4.7-3.el6
 gcc-c++-4.4.7-3.el6
 gdisk-0.8.4-1.el6
+git
 gperftools-libs-2.0-11.el6.3
 haproxy-1.4.19-1.el6
 hdparm-9.16-3.4.el6
