add ovscleanup pseudopackage
Change-Id: I9ce346032174d068fafe66872b414b70c0e40c9b

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -790,6 +790,7 @@ quantum-common
 quantum-dhcp-agent
 quantum-l3-agent
 quantum-metadata-agent
+quantum-ovs-cleanup
 quantum-plugin-openvswitch
 quantum-plugin-openvswitch-agent
 quantum-server
