--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -171,7 +171,12 @@ mod_fastcgi
 mod_ssl-2.2.15-15.el6.1
 mod_wsgi-3.2-1.el6
 mtools-4.0.17-3.el6
+murano-api
+murano-common
+murano-conductor
 murano-dashboard
+murano-metadataclient
+murano-repository
 nagios-3.5.0-1.el6
 nagios-common-3.5.0-1.el6
 nagios-plugins-1.4.16-5.el6
@@ -252,8 +257,6 @@ openstack-heat-api-cloudwatch
 openstack-heat-common
 openstack-heat-engine
 openstack-keystone
-openstack-murano-virtualenv-murano-api
-openstack-murano-virtualenv-murano-conductor
 openstack-neutron
 openstack-neutron-linuxbridge
 openstack-neutron-openvswitch
@@ -269,7 +272,6 @@ openstack-nova-network
 openstack-nova-novncproxy
 openstack-nova-objectstore
 openstack-nova-scheduler
-openstack-savanna-virtualenv-savanna
 openstack-swift
 openstack-swift-account
 openstack-swift-container
@@ -336,7 +338,6 @@ python-django-openstack-auth
 python-dmidecode-3.10.13-3.el6_4
 python-ethtool-0.6-3.el6
 python-eventlet
-python-eventlet-doc
 python-funcparserlib-0.3.5-1
 python-gflags-1.4-3.el6
 python-glance
@@ -482,8 +483,8 @@ rubygem-raemon-0.3.0-1.el6
 rubygem-rake
 rubygem-rdoc-3.12.2-1.el6
 rubygem-rest-client-1.6.1-2.el6
-rubygem-stomp-1.2.8-1.el6
-rubygem-stomp-doc-1.2.8-1.el6
+rubygem-stomp
+rubygem-stomp-doc
 rubygem-symboltable-1.0.2-1
 rubygem-systemu-2.5.2-1.el6
 rubygem-thin-1.2.8-4.el6
@@ -494,6 +495,7 @@ rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
 rubygem-yajl-ruby-1.1.0-2~1.el6
 rubygems-1.3.7-1.el6
+savanna
 savanna-dashboard
 scapy-2.0.0.10-5.el6
 screen-4.0.3-16.el6
