--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -619,36 +619,6 @@ openstack-murano-virtualenv-python-tempita
 openstack-murano-virtualenv-python-warlock
 openstack-murano-virtualenv-python-webob
 openstack-murano-virtualenv-python-yaml
-openstack-savanna-virtualenv
-openstack-savanna-virtualenv-python-alembic
-openstack-savanna-virtualenv-python-babel
-openstack-savanna-virtualenv-python-cinderclient
-openstack-savanna-virtualenv-python-d2to1
-openstack-savanna-virtualenv-python-eventlet
-openstack-savanna-virtualenv-python-flask
-openstack-savanna-virtualenv-python-greenlet
-openstack-savanna-virtualenv-python-iso8601
-openstack-savanna-virtualenv-python-jinja2
-openstack-savanna-virtualenv-python-jsonschema
-openstack-savanna-virtualenv-python-keystoneclient
-openstack-savanna-virtualenv-python-mako
-openstack-savanna-virtualenv-python-markupsafe
-openstack-savanna-virtualenv-python-mysql
-openstack-savanna-virtualenv-python-netaddr
-openstack-savanna-virtualenv-python-novaclient
-openstack-savanna-virtualenv-python-oslo.config
-openstack-savanna-virtualenv-python-paramiko
-openstack-savanna-virtualenv-python-pbr
-openstack-savanna-virtualenv-python-prettytable
-openstack-savanna-virtualenv-python-pycrypto
-openstack-savanna-virtualenv-python-pytz
-openstack-savanna-virtualenv-python-requests
-openstack-savanna-virtualenv-python-simplejson
-openstack-savanna-virtualenv-python-six
-openstack-savanna-virtualenv-python-sqlalchemy
-openstack-savanna-virtualenv-python-webob
-openstack-savanna-virtualenv-python-werkzeug
-openstack-savanna-virtualenv-savanna
 openvswitch-common
 openvswitch-datapath-lts-raring-dkms
 openvswitch-switch
@@ -766,6 +736,7 @@ python-pypcap
 python-pyudev
 python-requests
 python-routes
+python-savannaclient
 python-scapy
 python-scgi
 python-setuptools
@@ -823,6 +794,7 @@ ruby-yajl
 ruby1.8
 ruby1.8-dev
 rubygems
+savanna
 savanna-dashboard
 screen
 scrub
