--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -388,6 +388,7 @@ python-requests
 python-rhsm
 python-routes
 python-routes1.12-1.12.3-4.el6
+python-savannaclient
 python-seqdiag-0.8.2-1
 python-setuptools-0.6.10-3.el6
 python-simplejson
