--- a/iso/ks.template
+++ b/iso/ks.template
@@ -145,7 +145,9 @@ function save_cfg {
     sed -i -e 's#^\(HOSTNAME=\).*$#\1'"$hostname"'#' /etc/sysconfig/network
     grep -q "^\s*$ip\s+$hostname" /etc/hosts || echo "$ip $hostname" >> /etc/hosts
     echo "nameserver 127.0.0.1" > /etc/resolv.conf
+    [ $dns1 ] && echo "nameserver $dns1" > /etc/resolv.conf
     [ $dns1 ] && echo "nameserver $dns1" > /etc/dnsmasq.upstream
+    [ $dns2 ] && echo "nameserver $dns2" >> /etc/resolv.conf
     [ $dns2 ] && echo "nameserver $dns2" >> /etc/dnsmasq.upstream
 
     echo DEVICE=$device > $scrFile
