--- a/fuelweb_test/requirements.txt
+++ b/fuelweb_test/requirements.txt
@@ -1,5 +1,6 @@
 nose==1.2.1
 git+https://github.com/Mirantis/devops.git@2.1
+git+https://github.com/openstack-infra/nose-html-output.git
 anyjson==0.3.1
 paramiko==1.10.1
 proboscis==1.2.6.0
