--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -532,7 +532,12 @@ mountall
 msr-tools
 mtr-tiny
 multiarch-support
+murano-api
+murano-common
+murano-conductor
 murano-dashboard
+murano-metadataclient
+murano-repository
 mysql-client
 mysql-common
 mysql-server-wsrep
@@ -578,52 +583,6 @@ openssh-server
 openssl
 openstack-dashboard
 openstack-dashboard-ubuntu-theme
-openstack-murano-virtualenv
-openstack-murano-virtualenv-murano-api
-openstack-murano-virtualenv-murano-common
-openstack-murano-virtualenv-murano-conductor
-openstack-murano-virtualenv-python-amqp
-openstack-murano-virtualenv-python-anyjson
-openstack-murano-virtualenv-python-babel
-openstack-murano-virtualenv-python-boto
-openstack-murano-virtualenv-python-d2to1
-openstack-murano-virtualenv-python-decorator
-openstack-murano-virtualenv-python-deep
-openstack-murano-virtualenv-python-eventlet
-openstack-murano-virtualenv-python-greenlet
-openstack-murano-virtualenv-python-heatclient
-openstack-murano-virtualenv-python-httplib2
-openstack-murano-virtualenv-python-iso8601
-openstack-murano-virtualenv-python-jsonpatch
-openstack-murano-virtualenv-python-jsonpath
-openstack-murano-virtualenv-python-jsonpointer
-openstack-murano-virtualenv-python-jsonschema
-openstack-murano-virtualenv-python-keystoneclient
-openstack-murano-virtualenv-python-kombu
-openstack-murano-virtualenv-python-lxml
-openstack-murano-virtualenv-python-markupsafe
-openstack-murano-virtualenv-python-netaddr
-openstack-murano-virtualenv-python-ordereddict
-openstack-murano-virtualenv-python-oslo.config
-openstack-murano-virtualenv-python-passlib
-openstack-murano-virtualenv-python-paste
-openstack-murano-virtualenv-python-pastedeploy
-openstack-murano-virtualenv-python-pbr
-openstack-murano-virtualenv-python-prettytable
-openstack-murano-virtualenv-python-puka
-openstack-murano-virtualenv-python-pycrypto
-openstack-murano-virtualenv-python-pytz
-openstack-murano-virtualenv-python-repoze.lru
-openstack-murano-virtualenv-python-requests
-openstack-murano-virtualenv-python-routes
-openstack-murano-virtualenv-python-simplejson
-openstack-murano-virtualenv-python-six
-openstack-murano-virtualenv-python-sqlalchemy
-openstack-murano-virtualenv-python-sqlalchemy-migrate
-openstack-murano-virtualenv-python-tempita
-openstack-murano-virtualenv-python-warlock
-openstack-murano-virtualenv-python-webob
-openstack-murano-virtualenv-python-yaml
 openvswitch-common
 openvswitch-datapath-lts-raring-dkms
 openvswitch-switch
