--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -365,7 +365,7 @@ python-ordereddict-1.1-2.el6
 python-oslo-config-1.1.0-1.el6
 python-oslo-config-doc-1.1.0-1.el6
 python-osnagios-1.1-5.el6
-python-paramiko-1.7.5-2.1.el6
+python-paramiko
 python-passlib-1.5.3-1.el6
 python-paste-1.7.5.1-4.20111221hg1498.el6
 python-paste-deploy1.5-1.5.0-5.el6
