--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -122,6 +122,7 @@ euca2ools-2.1.3-1.el6
 fcgiwrap-1.0.3-2
 fence-agents-3.1.5-25.el6_4.2
 flex-2.5.35-8.el6
+fuel-utils
 fuse-libs-2.8.3-4.el6
 galera
 gcc-4.4.7-3.el6
