--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -26,6 +26,7 @@ boost-system-1.41.0-17.el6_4
 boost-thread-1.41.0-17.el6_4
 byacc-1.9.20070509-7.el6
 c-ares19-1.9.1-4.el6.3
+fuel-utils
 ceilometer-2013.1-4
 centos-release-6-4.el6.centos.10
 ceph
