Add packages for ceilometer alarms
  - two added to requirements-deb.txt
  - one added to requirements-rpm.txt

Change-Id: Id5d24e4446f20667163c8ef39b0b5d4ac3acbaf4

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -31,6 +31,8 @@ busybox-initramfs
 busybox-static
 bzip2
 ca-certificates
+ceilometer-alarm-evaluator
+ceilometer-alarm-notifier
 ceilometer-agent-compute
 ceilometer-agent-central
 ceilometer-api
