Remove kernel version in requirements-rpm.txt
Add  openvswitch-kmod in requirements-rpm.txt

Change-Id: I015a0fcd85bda0db0c917da69fdc84a72a2acdd8

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -140,10 +140,10 @@ httpd-2.2.15-15.el6.1
 httpd-tools-2.2.15-15.el6.1
 iproute-2.6.32-130.el6.netns.2.mira1
 keepalived-1.2.4-1.el6
-kernel-2.6.32-358.123.2.openstack.el6
-kernel-devel-2.6.32-358.123.2.openstack.el6
-kernel-firmware-2.6.32-358.123.2.openstack.el6
-kernel-headers-2.6.32-358.123.2.openstack.el6
+kernel
+kernel-devel
+kernel-firmware
+kernel-headers
 leveldb-1.7.0-2.el6
 libaio-0.3.107-10.el6
 libcephfs1
@@ -284,6 +284,7 @@ openstack-swift-plugin-swift3
 openstack-swift-proxy
 openstack-utils
 openvswitch
+kmod-openvswitch
 pacemaker-1.1.8-1.el6
 pacemaker-cli-1.1.8-1.el6
 pacemaker-cluster-libs-1.1.8-1.el6
