--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -140,10 +140,10 @@ httpd-2.2.15-15.el6.1
 httpd-tools-2.2.15-15.el6.1
 iproute-2.6.32-130.el6.netns.2.mira1
 keepalived-1.2.4-1.el6
-kernel-2.6.32-358.123.2.openstack.el6
-kernel-devel-2.6.32-358.123.2.openstack.el6
-kernel-firmware-2.6.32-358.123.2.openstack.el6
-kernel-headers-2.6.32-358.123.2.openstack.el6
+kernel
+kernel-devel
+kernel-firmware
+kernel-headers
 leveldb-1.7.0-2.el6
 libaio-0.3.107-10.el6
 libcephfs1
@@ -284,6 +284,7 @@ openstack-swift-plugin-swift3
 openstack-swift-proxy
 openstack-utils
 openvswitch
+kmod-openvswitch
 pacemaker-1.1.8-1.el6
 pacemaker-cli-1.1.8-1.el6
 pacemaker-cluster-libs-1.1.8-1.el6
@@ -302,8 +303,8 @@ postgresql-devel-8.4.13-1.el6_3
 postgresql-libs-8.4.13-1.el6_3
 postgresql-server-8.4.13-1.el6_3
 pssh-2.3.1-15.2
-puppet-2.7.19-1.el6
-puppet-server-2.7.19-1.el6
+puppet
+puppet-server
 puppetdb-1.2.0-1.el6
 puppetdb-terminus-1.2.0-1.el6
 puppetlabs-release-6-6
@@ -373,7 +374,6 @@ python-nova
 python-novaclient
 python-novaclient-doc
 python-nwdiag-0.9.4-1
-python-openvswitch
 python-ordereddict-1.1-2.el6
 python-oslo-config
 python-oslo-config-doc
