--- a/iso/ks.template
+++ b/iso/ks.template
@@ -112,7 +112,7 @@ mlocate
 ntp
 openssh-clients
 policycoreutils
-puppet-2.7.19
+puppet
 selinux-policy-targeted
 subscription-manager
 system-config-firewall-base
