Install daemonize on master node
Change-Id: I1c1ffca2f1d766824b0c28cd0c80a8d3368844ef

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -106,22 +106,23 @@ bind-utils
 cronie
 crontabs
 curl
+daemonize
 fuelmenu
+gdisk
 man
 mlocate
 ntp
 openssh-clients
 policycoreutils
 puppet-2.7.19
+rubygem-netaddr
+rubygem-openstack
 selinux-policy-targeted
 subscription-manager
 system-config-firewall-base
 tcpdump
 vim-enhanced
-rubygem-netaddr
-rubygem-openstack
 wget
-gdisk
 yum
 
 %include /tmp/post_partition.ks
