Remove puppet version in iso/ks.template
Change-Id: Ieb651381c07c5d663ee27ea87726a8d065623d98

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -114,7 +114,7 @@ mlocate
 ntp
 openssh-clients
 policycoreutils
-puppet-2.7.19
+puppet
 rubygem-netaddr
 rubygem-openstack
 selinux-policy-targeted
