Added Murano CirrOS image (Demo image).
Change-Id: I4dffe243b154390350486ecc0b074771c51c5868

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -539,6 +539,7 @@ murano-conductor
 murano-dashboard
 murano-metadataclient
 murano-repository
+murano-cirros-testvm
 mysql-client
 mysql-common
 mysql-server-wsrep
