Add cciss p serperator in fuel main ks
Add support for the cciss p seperator so that said devices can be used to
install fuel

Closes-bug #1259276

Change-Id: I9acdd755e35dd077f7b1f94ea7436258cbc39b92

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -72,8 +72,15 @@ sleep 3
 hdparm -z /dev/${tgtdrive}
 
 # partition
+
+# This adds support for the p seperator required for cciss devices
+if [ `grep -q -e cciss` ] ; then
+    bootdev=${tgtdrive}p
+else
+    bootdev=${tgtdrive}
+fi
 echo > /tmp/partition.ks
-echo "partition /boot --onpart=/dev/${tgtdrive}3" >> /tmp/partition.ks
+echo "partition /boot --onpart=/dev/${bootdev}3" >> /tmp/partition.ks
 echo "partition pv.001 --ondisk=${tgtdrive} --size=1 --grow" >> /tmp/partition.ks
 echo "volgroup os pv.001" >> /tmp/partition.ks
 echo "logvol swap --vgname=os --recommended --name=swap" >> /tmp/partition.ks
