--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -140,10 +140,13 @@ httpd-2.2.15-15.el6.1
 httpd-tools-2.2.15-15.el6.1
 iproute-2.6.32-130.el6.netns.2.mira1
 keepalived-1.2.4-1.el6
-kernel
-kernel-devel
-kernel-firmware
-kernel-headers
+kernel-2.6.32-358.123.3.openstack.el6
+kernel-devel-2.6.32-358.123.3.openstack.el6
+kernel-firmware-2.6.32-358.123.3.openstack.el6
+kernel-headers-2.6.32-358.123.3.openstack.el6
+kernel-ml
+kernel-ml-devel
+kernel-ml-headers
 leveldb-1.7.0-2.el6
 libaio-0.3.107-10.el6
 libcephfs1
