--- a/fuelweb_test/requirements.txt
+++ b/fuelweb_test/requirements.txt
@@ -2,4 +2,7 @@ nose==1.2.1
 git+https://github.com/stackforge/fuel-devops.git@2.1.1
 anyjson==0.3.1
 paramiko==1.10.1
+python-glanceclient>=0.9.0
+python-keystoneclient>=0.3.2
+python-novaclient>=2.15.0
 proboscis==1.2.6.0
