--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -523,6 +523,7 @@ subscription-manager
 supervisor
 syslinux-4.02-8.el6
 system-config-firewall-base-1.2.27-5.el6
+sheepdog
 tcpdump-4.0.0-3.20090921gitdf3cb4.2.el6
 tftp-server-0.49-7.el6
 time-1.7-37.1.el6
