--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -120,7 +120,7 @@ erlang-wx-R14B-04.8.el6
 erlang-xmerl-R14B-04.8.el6
 euca2ools-2.1.3-1.el6
 fcgiwrap-1.0.3-2
-fence-agents-3.1.5-25.el6_4.2
+fence-agents
 flex-2.5.35-8.el6
 fuel-utils
 fuse-libs-2.8.3-4.el6
