--- a/requirements-gems.txt
+++ b/requirements-gems.txt
@@ -26,6 +26,7 @@ net-ssh-gateway 1.1.0
 net-ssh-multi 1.1
 ohai 6.14.0
 polyglot 0.3.3
+popen4 0.1.2
 rails 3.0.10
 rest-client 1.6.7
 rethtool 0.0.3
