Add atop and dstat to ubuntu and centos
Change-Id: I17f0578223e17527b2a03ab5932cf1f5c4106310

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -15,6 +15,7 @@ apt-utils
 apt-xapian-index
 aptitude
 at
+atop
 augeas-lenses
 base-files
 base-passwd
@@ -83,6 +84,7 @@ dnsutils
 dosfstools
 dpkg
 dpkg-dev
+dstat
 e2fslibs
 e2fsprogs
 ed
