--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -15,6 +15,8 @@ apr-1.3.9-5.el6
 apr-util-1.3.9-3.el6.1
 apr-util-ldap-1.3.9-3.el6.1
 at-3.1.10-43.el6_2.1
+atop
+dstat
 authconfig-6.1.12-13.el6
 autoconf-2.63-5.1.el6
 automake-1.11.1-4.el6
