--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -15,6 +15,7 @@ apr-1.3.9-5.el6
 apr-util-1.3.9-3.el6.1
 apr-util-ldap-1.3.9-3.el6.1
 at-3.1.10-43.el6_2.1
+atop
 authconfig-6.1.12-13.el6
 autoconf-2.63-5.1.el6
 automake-1.11.1-4.el6
@@ -64,6 +65,7 @@ disktype
 dmidecode-2.11-2.el6
 dnsmasq-2.65-5.el6
 dnsmasq-utils-2.65-5.el6
+dstat
 ed-1.1-3.3.el6
 erlang-R14B-04.8.el6
 erlang-appmon-R14B-04.8.el6
