--- a/fuelweb_test/requirements.txt
+++ b/fuelweb_test/requirements.txt
@@ -7,4 +7,6 @@ ipaddr
 python-glanceclient>=0.9.0
 python-keystoneclient>=0.3.2
 python-novaclient>=2.15.0
+savanna==0.3
+python-savannaclient==0.3
 Jinja2
