--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -129,6 +129,7 @@ erlang-xmerl-R14B-04.8.el6
 euca2ools-2.1.3-1.el6
 fcgiwrap-1.0.3-2
 fence-agents
+fencing-agent
 flex-2.5.35-8.el6
 fuel-utils
 fuse-libs-2.8.3-4.el6
