--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -549,6 +549,8 @@ murano-repository
 mysql-client
 mysql-common
 mysql-server-wsrep
+mongodb-clients
+mongodb-server
 nailgun-agent
 nailgun-mcagents
 nailgun-net-check
@@ -585,6 +587,7 @@ ntfs-3g
 ntfsprogs
 ntp
 ntpdate
+nmap
 openhpid
 openssh-client
 openssh-server
@@ -739,6 +742,7 @@ python2.7
 python2.7-minimal
 qemu-kvm
 qemu-utils
+qemu-guest-agent
 rabbitmq-server
 radosgw
 readline-common
