--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -43,7 +43,7 @@ cluster-glue-libs-1.0.11-59.1
 cman-3.0.12.1-49.el6
 cobbler-2.2.3-2.el6
 cobbler-web-2.2.3-2.el6
-corosync-1.4.3-26.2
+corosync
 corosynclib-1.4.3-26.2
 cpufreq-init
 crmsh-1.2.5-55.2
@@ -174,6 +174,10 @@ libuv-devel-0.10.4-1.el6
 libxml2-2.7.6-12.el6_4.1
 libyaml-0.1.3-1.el6
 lzop-1.02-0.9.rc1.el6
+libmongodb
+mongodb
+mongodb-devel
+mongodb-server
 mailcap-2.1.31-2.el6
 mailx-12.4-6.el6
 make-3.81-20.el6
@@ -193,6 +197,7 @@ murano-conductor
 murano-dashboard
 murano-metadataclient
 murano-repository
+nmap
 nagios-3.5.0-1.el6
 nagios-common-3.5.0-1.el6
 nagios-plugins-1.4.16-5.el6
@@ -298,15 +303,16 @@ openstack-swift-proxy
 openstack-utils
 openvswitch
 kmod-openvswitch
-pacemaker-1.1.8-1.el6
-pacemaker-cli-1.1.8-1.el6
-pacemaker-cluster-libs-1.1.8-1.el6
-pacemaker-libs-1.1.8-1.el6
+pacemaker
+pacemaker-cli
+pacemaker-cluster-libs
+pacemaker-libs
 parted-2.1-19.el6
 passwd-0.77-4.el6_2.2
 patch-2.6-6.el6
 pax-3.4-10.1.el6
 pcapy-0.10.8-2.el6
+pcs
 perl-DBD-MySQL-4.022-1.el6
 perl-LockFile-Simple-0.207-2.el6
 perl-devel-5.10.1-131.el6_4
@@ -436,6 +442,7 @@ qpid-cpp-server-store-0.14-22.el6_3
 qpid-qmf-0.14-14.el6_3
 qpid-tests-0.14-1.el6_2
 qpid-tools-0.14-6.el6_3
+qemu-guest-agent
 rabbitmq-server-2.8.7-2.el6
 rbd-fuse
 redhat-lsb-core-4.0-7.el6.centos
@@ -553,4 +560,5 @@ xfsprogs-3.1.1-10.el6
 xinetd-2.3.14-38.el6
 yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
+yum-plugin-versionlock
 zlib-devel-1.2.3-29.el6
