Add new corosync pacemaker and pcs pakages
Change-Id: I9c624ab31df735eddf26f32ccb23fe77842cad13

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -43,8 +43,7 @@ cluster-glue-libs-1.0.11-59.1
 cman-3.0.12.1-49.el6
 cobbler-2.2.3-2.el6
 cobbler-web-2.2.3-2.el6
-corosync-1.4.3-26.2
-corosynclib-1.4.3-26.2
+corosync-1.4.6-26.2
 cpufreq-init
 crmsh-1.2.5-55.2
 cronie-1.4.4-7.el6
@@ -298,10 +297,9 @@ openstack-swift-proxy
 openstack-utils
 openvswitch
 kmod-openvswitch
-pacemaker-1.1.8-1.el6
-pacemaker-cli-1.1.8-1.el6
-pacemaker-cluster-libs-1.1.8-1.el6
-pacemaker-libs-1.1.8-1.el6
+pacemaker-1.1.8-7
+pacemaker-cluster-libs
+pacemaker-libs
 parted-2.1-19.el6
 passwd-0.77-4.el6_2.2
 patch-2.6-6.el6
@@ -316,6 +314,7 @@ postgresql-devel-8.4.13-1.el6_3
 postgresql-libs-8.4.13-1.el6_3
 postgresql-server-8.4.13-1.el6_3
 pssh-2.3.1-15.2
+pcs
 puppet
 puppet-server
 puppetdb-1.2.0-1.el6
@@ -438,7 +437,7 @@ qpid-tests-0.14-1.el6_2
 qpid-tools-0.14-6.el6_3
 rabbitmq-server-2.8.7-2.el6
 rbd-fuse
-redhat-lsb-core-4.0-7.el6.centos
+redhat-lsb-fuse-4.0-7.el6.centos
 resource-agents-3.9.5-56.1
 rpm-build-4.8.0-32.el6
 rst2pdf-0.16-1.el6
