Fix logic for evaluating disk size during install
Previous method erroneously did a string comparison
instead of a numerical one.

Change-Id: Iff9591afd0be483c70d57dcb03cabb8453a2b512

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -58,7 +58,7 @@ fi
 
 # verify tgtdrive is at least 30GB
 tgtdrivesize=$(( $(cat "/sys/class/block/${tgtdrive}/size") / 2 / 1024 ))
-if [[ "$tgtdrivesize" < "30720" ]]; then
+if [ $tgtdrivesize -lt 30720 ]; then
     exec < /dev/tty3 > /dev/tty3 2>&1
     chvt 3
     clear
