--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -1,8 +1,11 @@
 Fabric==1.7.0
 Jinja2==2.7
+Mako==0.9.1
+MarkupSafe==0.18
 Paste==1.7.5.1
 PyYAML==3.10
 SQLAlchemy==0.7.8
+alembic==0.6.2
 amqplib==1.0.2
 anyjson==0.3.1
 argparse==1.2.1
