--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -551,3 +551,6 @@ xinetd-2.3.14-38.el6
 yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
+libpcap-1.3.0-2.el6
+libpcap-devel-1.3.0-2.el6
+python-pypcap-1.1-15.1
