Support mcollective heartbeat in bootstrap mode
Change-Id: Ib1ffca8194c9bc746b1ac02d74e5e9bfcf1723ae
Closes-Bug: #1274847

--- a/bootstrap/sync/etc/mcollective/server.cfg
+++ b/bootstrap/sync/etc/mcollective/server.cfg
@@ -23,6 +23,7 @@ plugin.rabbitmq.pool.1.host =
 plugin.rabbitmq.pool.1.port = 61613
 plugin.rabbitmq.pool.1.user = mcollective
 plugin.rabbitmq.pool.1.password = marionette
+plugin.rabbitmq.heartbeat_interval = 30
 
 # Facts
 factsource = yaml
