--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -139,7 +139,7 @@ gdisk-0.8.4-1.el6
 git
 gperftools-libs-2.0-11.el6.3
 gpxe-bootimgs
-haproxy-1.4.19-1.el6
+haproxy
 hdparm-9.16-3.4.el6
 hiera-1.2.0-1.el6
 htop
