Add package python-pcs to ubuntu Remove version libqb for rpm
Change-Id: Ia5d752aaffaa9b03f347250ee98b37b74dec63bb

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -701,6 +701,7 @@ python-paste
 python-pastedeploy
 python-pastescript
 python-pbr
+python-pcs
 python-pkg-resources
 python-prettytable
 python-pyasn1
