--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -161,7 +161,7 @@ libcephfs1
 libevent-devel-1.4.13-4.el6
 libfcgi-2.4.0-alt5.2
 libicu-4.2.1-9.1.el6_2
-libqb-0.14.2-4.el6
+libqb
 librados2
 librbd1
 librelp-0.1.1-4.1.el6
