Add package python-pcs to ubuntu
Remove version libqb for rpm
Remove version cobbler for rpm
Remove old package libcib1 for deb

Change-Id: Ia5d752aaffaa9b03f347250ee98b37b74dec63bb

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -251,7 +251,6 @@ libcap-ng0
 libcap2
 libccs3
 libcfg4
-libcib1
 libclass-accessor-perl
 libclass-isa-perl
 libcman3
@@ -701,6 +700,7 @@ python-paste
 python-pastedeploy
 python-pastescript
 python-pbr
+python-pcs
 python-pkg-resources
 python-prettytable
 python-pyasn1
