--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -41,8 +41,8 @@ ceph-test
 cirros-testvm
 cluster-glue-libs-1.0.11-59.1
 cman-3.0.12.1-49.el6
-cobbler-2.2.3-2.el6
-cobbler-web-2.2.3-2.el6
+cobbler
+cobbler-web
 corosync
 cpufreq-init
 crmsh-1.2.5-55.2
@@ -161,7 +161,7 @@ libcephfs1
 libevent-devel-1.4.13-4.el6
 libfcgi-2.4.0-alt5.2
 libicu-4.2.1-9.1.el6_2
-libqb-0.14.2-4.el6
+libqb
 librados2
 librbd1
 librelp-0.1.1-4.1.el6
