Add package python-pcs to ubuntu
Remove version libqb for rpm
Remove version cobbler for rpm
Remove old package libcib1,libpe-rules2,libpe-status3,libpengine3 for deb

Change-Id: Ia5d752aaffaa9b03f347250ee98b37b74dec63bb

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -251,7 +251,6 @@ libcap-ng0
 libcap2
 libccs3
 libcfg4
-libcib1
 libclass-accessor-perl
 libclass-isa-perl
 libcman3
@@ -396,9 +395,6 @@ libpcap0.8
 libpci3
 libpciaccess0
 libpcre3
-libpe-rules2
-libpe-status3
-libpengine3
 libperl5.14
 libpils2
 libpipeline1
@@ -701,6 +697,7 @@ python-paste
 python-pastedeploy
 python-pastescript
 python-pbr
+python-pcs
 python-pkg-resources
 python-prettytable
 python-pyasn1
