Add percona-toolkit for cleanup of tokens
Change-Id: I2ecd828f24da6039e81c5ff3290e541811e9e92a
Partial-Bug: #1274756

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -303,6 +303,7 @@ passwd-0.77-4.el6_2.2
 patch-2.6-6.el6
 pax-3.4-10.1.el6
 pcapy-0.10.8-2.el6
+percona-toolkit
 perl-DBD-MySQL-4.022-1.el6
 perl-LockFile-Simple-0.207-2.el6
 perl-devel-5.10.1-131.el6_4
