--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -27,6 +27,7 @@ pbr==0.5.21
 pip==1.2.1
 prettytable==0.6.1
 psycopg2==2.4.6
+pyOpenSSL==0.13
 pycrypto==2.6
 python-ceilometerclient==1.0.6
 python-cinderclient==1.0.6
