Replace kernel-ml packages with kernel-lt
kernel-lt works better to resolve OVS support than kernel-ml.

dont merge untill packages are added to the mirror

Change-Id: I52403751cf8166a0ef6d00a1b1254b3068d82eaa
Related-bug: 1282493
Related-bug: 1263072

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -152,9 +152,10 @@ kernel-2.6.32-358.123.3.openstack.el6
 kernel-devel-2.6.32-358.123.3.openstack.el6
 kernel-firmware-2.6.32-358.123.3.openstack.el6
 kernel-headers-2.6.32-358.123.3.openstack.el6
-kernel-ml
-kernel-ml-devel
-kernel-ml-headers
+kernel-lt
+kernel-lt-devel
+kernel-lt-headers
+kernel-lt-firmware
 leveldb-1.7.0-2.el6
 libaio-0.3.107-10.el6
 libcephfs1
