--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -37,6 +37,7 @@ python-muranoclient==0.2.11
 python-novaclient==2.15.0
 python-savannaclient==0.3
 requests==1.1.0
+Shotgun
 simplejson==2.6.2
 six==1.1.0
 tornado==3.0
