--- a/iso/ks.template
+++ b/iso/ks.template
@@ -29,9 +29,14 @@ for drv in `ls -1 /sys/block | grep "sd\|hd\|vd\|cciss"`; do
     fi
 done
 
+installdrive="undefined"
+for I in `cat /proc/cmdline`; do case "$I" in *=*) eval $I;; esac ; done
+
 set ${drives}
 numdrives=`echo $#`
-tgtdrive="undefined"
+
+tgtdrive="${installdrive}"
+
 if [ ${numdrives} -gt 1 ]; then
     exec < /dev/tty3 > /dev/tty3 2>&1
     chvt 3
