Remove version of MySQL-python from requirements-rpm.txt
Related-Bug: #1285449

Change-Id: I26d2a2089229240fed93cbdadc7023ac980bd958

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -5,7 +5,7 @@ Django14
 GeoIP-1.4.8-1.el6
 MySQL-client-5.5.28-7
 MySQL-client-wsrep-5.5.28_wsrep_23.7-12
-MySQL-python-1.2.3-0.3.c1.2.el6
+MySQL-python
 MySQL-server-5.5.28-7
 MySQL-server-wsrep-5.5.28_wsrep_23.7-12
 MySQL-shared-5.5.28-7
